# workspace

./: README.md
.devcontainer/: Dockerfile
clinchc/: Cargo.toml
clinchlib/: Cargo.toml
clinchlsp/: Cargo.toml
clinchlsp/src/: main.rs
parsoa/: Cargo.toml
parsoa/src/: clinch.pest  lib.rs
