[package]
name = "clinchlsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.6.0"
lsp-types = "0.93.1"
serde_json = "1.0.85"
serde = "1.0.144"
etcd-client = "0.10"
tokio = { version = "1.0", features = ["full"] }
