[package]
name = "parsoa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3.0"
pest_derive = "2.3.0"
lsp-server = "0.6.0"
lsp-types = "0.93.1"
serde_json = "1.0.85"
serde = "1.0.144"
tonic = "0.8.0"
